# minimal

./: .gitpod.Dockerfile  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
