[package]
name = "minimal"
version = "0.1.0"
authors = ["Frederick <frederick@vollbrecht.cc>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }

esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", features = [
    "nightly",
    "experimental",
    "embassy-time-driver",
    "embassy-time-isr-queue",
]}

esp-idf-hal = {  git = "https://github.com/esp-rs/esp-idf-hal", features = [
    "edge-executor",
    "embassy-sync",
    "embassy-time",
    "critical-section",
] }


[build-dependencies]
embuild = "0.30"
anyhow = "1"
