[package]
name = "minimal"
version = "0.1.0"
authors = ["Frederick <frederick@vollbrecht.cc>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"


[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }

esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev="29daea58493a0f041b548e6f72e1ac460acee726" }
#esp-idf-svc = {version = "0.42.3"}

[build-dependencies]
embuild = "0.30"
anyhow = "1"
